--- a/CRM.UnitTest/App.config
+++ b/CRM.UnitTest/App.config
@@ -2,7 +2,7 @@
 <configuration>
   <connectionStrings>
     <add name="CrmConnection" connectionString="Url=https://thomascookdev.crm4.dynamics.com;Username=tcgdynamicscrmnoprd@thomascook.onmicrosoft.com;Password=9L%$!AIOps$$;authtype=Office365"/>
-    <add name="TargetCrmConnection" connectionString="RequireNewInstance=True;Url=https://thomascooksit.crm4.dynamics.com;Username=tcgdynamicscrmnoprd@thomascook.onmicrosoft.com;Password=9L%$!AIOps$$;authtype=Office365"/>
+    <add name="TargetCrmConnection" connectionString="RequireNewInstance=True;Url=https://thomascookstaging.crm4.dynamics.com;Username=tcgdynamicscrmnoprd@thomascook.onmicrosoft.com;Password=9L%$!AIOps$$;authtype=Office365"/>
     <!-- PROD <add name="TargetCrmConnection" connectionString="RequireNewInstance=True;Url=https://thomascook.crm4.dynamics.com;Username=tcgdyncrmdepPRD@thomascook.onmicrosoft.com;Password=*(yhf5!$shg&lt;;authtype=Office365"/>-->
   </connectionStrings>
 </configuration>
