--- a/CRM.UnitTest/CRM.UnitTest.csproj
+++ b/CRM.UnitTest/CRM.UnitTest.csproj
@@ -78,6 +78,7 @@
     <Reference Include="System.Activities.Presentation" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data" />
     <Reference Include="System.DirectoryServices" />
     <Reference Include="System.DirectoryServices.AccountManagement" />
     <Reference Include="System.IdentityModel" />
@@ -94,6 +95,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AzureDBconnectionTest.cs" />
     <Compile Include="Fakes\FakeOrganizationServiceFactory.cs" />
     <Compile Include="Fakes\FakePluginExecutionContext.cs" />
     <Compile Include="Fakes\FakeServiceProvider.cs" />
@@ -107,6 +109,7 @@
     <Compile Include="SolutionComponentTest.cs" />
     <Compile Include="TransactionTest.cs" />
     <Compile Include="BusinessRuleTest.cs" />
+    <Compile Include="DeploymentTest.cs" />
     <Compile Include="WorkflowTests\FetchParameterTest.cs" />
   </ItemGroup>
   <ItemGroup>
