--- a/CRM.UnitTest/App.config
+++ b/CRM.UnitTest/App.config
@@ -1,8 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <connectionStrings>
-    <add name="CrmConnection" connectionString="Url=https://thomascooksit.crm4.dynamics.com;Username=tcgdynamicscrmnoprd@thomascook.onmicrosoft.com;Password=9L%$!AIOps$$;authtype=Office365"/>
-    <add name="TargetCrmConnection" connectionString="RequireNewInstance=True;Url=https://xxxx.crm4.dynamics.com;Username=tcgdynamicscrmnoprd@thomascook.onmicrosoft.com;Password=9L%$!AIOps$$;authtype=Office365"/>
-    <!-- PROD <add name="TargetCrmConnection" connectionString="RequireNewInstance=True;Url=https://thomascook.crm4.dynamics.com;Username=tcgdyncrmdepPRD@thomascook.onmicrosoft.com;Password=*(yhf5!$shg&lt;;authtype=Office365"/>-->
+    <add name="CrmConnection" connectionString="Url=https://thomascookstaging.crm4.dynamics.com;Username=;Password=;authtype=Office365"/>
+    <add name="TargetCrmConnection" connectionString="RequireNewInstance=True;Url=https://thomascookstaging.crm4.dynamics.com;Username=;Password=;authtype=Office365"/>
   </connectionStrings>
 </configuration>
