--- a/CRM.UnitTest/CRM.UnitTest.csproj
+++ b/CRM.UnitTest/CRM.UnitTest.csproj
@@ -95,6 +95,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EmailTest.cs" />
     <Compile Include="AzureDBconnectionTest.cs" />
     <Compile Include="Fakes\FakeOrganizationServiceFactory.cs" />
     <Compile Include="Fakes\FakePluginExecutionContext.cs" />
